--- a/.github/workflows/deb-release-amd.yml
+++ b/.github/workflows/deb-release-amd.yml
@@ -1,4 +1,4 @@
-name: Build and Publish DEB Package for AMD64
+name: Build and Publish DEB Package for AMD64 and ARM64
 on:
   push:
     tags:
@@ -15,6 +15,7 @@ env:
   USE_BROTLI: 1
   USE_LIBSODIUM: 1
   USE_LZO: 1
+  VERSION: "${{ github.ref_name }}"
 
 jobs:
   release-ubuntu:
@@ -51,8 +52,8 @@ jobs:
       - name: Rename WAL-G binary
         run: mv main/${{ matrix.db }}/wal-g wal-g-${{ matrix.db }}-amd64-${{ matrix.os }}
 
-      - name: Extract version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+      # - name: Extract version
+      #   run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
       - name: Create DEB package
         run: |
@@ -77,9 +78,77 @@ jobs:
           name: wal-g-deb-${{ matrix.db }}-${{ matrix.os }}
           path: wal-g_${{ env.VERSION}}-${{ matrix.db }}-amd64-${{ matrix.os }}.deb
 
+  release-ubuntu-arm64:
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        db: [pg]
+        include:
+          - arch: aarch64
+            distro: ubuntu20.04
+            label: ubuntu-20.04
+      fail-fast: false
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build and package WAL-G inside ARM64 container
+        uses: uraimo/run-on-arch-action@v3
+        with:
+          arch: ${{ matrix.arch }}
+          distro: ${{ matrix.distro }}
+          env: |
+            USE_BROTLI: ${{ env.USE_BROTLI }}
+            USE_LIBSODIUM: ${{ env.USE_LIBSODIUM }}
+            USE_LZO: ${{ env.USE_LZO }}
+          shell: /bin/bash
+          run: |
+            apt-get update
+            apt-get install -y build-essential curl git cmake liblzo2-dev brotli libsodium-dev devscripts debhelper dh-make dpkg-dev
+
+            curl -LO https://go.dev/dl/go${{ env.GO_VERSION }}.linux-arm64.tar.gz
+            tar -C /usr/local -xzf go${{ env.GO_VERSION }}.linux-arm64.tar.gz
+            export GOROOT=/usr/local/go
+            export GOPATH=$HOME/go          
+            export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
+
+            git config --global --add safe.directory /home/runner/work/wal-g/wal-g
+            git config --global --add safe.directory /home/runner/work/wal-g/wal-g/submodules/brotli
+            git config --global --add safe.directory /home/runner/work/walg_test/walg_test
+            git config --global --add safe.directory /home/runner/work/walg_test/walg_test/submodules/brotli
+
+            make deps
+            make pg_build
+            mv main/${{ matrix.db }}/wal-g wal-g-${{ matrix.db }}-arm64-${{ matrix.label }}
+            # echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+
+            mkdir -p wal-g-deb/DEBIAN
+            mkdir -p wal-g-deb/usr/bin/
+            cp wal-g-${{ matrix.db }}-arm64-${{ matrix.label }} wal-g-deb/usr/bin/wal-g
+            chmod 755 wal-g-deb/usr/bin/wal-g
+
+            cat <<EOF > wal-g-deb/DEBIAN/control
+            Package: wal-g-${{ matrix.db }}
+            Version: ${VERSION}
+            Section: database
+            Priority: extra
+            Architecture: arm64
+            Maintainer: mdb <mdb-admin@yandex-team.ru>
+            Description: WAL-G backup tool for ${{ matrix.db }} (Brotli, libsodium, LZO enabled)
+            EOF
+            dpkg-deb --build wal-g-deb wal-g_${VERSION}-${{ matrix.db }}-arm64-${{ matrix.label }}.deb
+
+            mkdir -p artifacts
+
+      - name: Upload DEB package
+        uses: actions/upload-artifact@v4
+        with:
+          name: wal-g-deb-${{ matrix.db }}-${{ matrix.label }}-arm64
+          path: wal-g_${{ env.VERSION}}-${{ matrix.db }}-arm64-${{ matrix.label }}.deb
+
 
   deploy-to-gh-pages:
-    needs: release-ubuntu
+    needs: [release-ubuntu, release-ubuntu-arm64]
     runs-on: ubuntu-20.04
 
     steps:
