--- a/.github/workflows/deb-release-amd.yml
+++ b/.github/workflows/deb-release-amd.yml
@@ -17,13 +17,14 @@ env:
   USE_LZO: 1
 
 jobs:
-  release-ubuntu:
+  release-ubuntu-amd64:
     strategy:
       matrix:
         # os: [ ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
         os: [ ubuntu-20.04 ]
         # db: [ pg, mongo, redis]
         db: [ pg]
+        deb_arch: [amd64]
       max-parallel: 6
       fail-fast: false
     runs-on: ${{ matrix.os }}
@@ -48,33 +49,33 @@ jobs:
         run: make ${{ matrix.db }}_build
 
       - name: Rename WAL-G binary
-        run: mv main/${{ matrix.db }}/wal-g wal-g-${{ matrix.db }}-amd64-${{ matrix.os }}
+        run: mv main/${{ matrix.db }}/wal-g wal-g-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.os }}
 
       - name: Extract version
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
-      - name: Create DEB package (AMD64)
+      - name: Create DEB package (${{ matrix.deb_arch }})
         run: |
           mkdir -p wal-g-deb/DEBIAN
           mkdir -p wal-g-deb/usr/bin/
-          cp wal-g-${{ matrix.db }}-amd64-${{ matrix.os }} wal-g-deb/usr/bin/wal-g
+          cp wal-g-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.os }} wal-g-deb/usr/bin/wal-g
           chmod 755 wal-g-deb/usr/bin/wal-g
           cat <<EOF > wal-g-deb/DEBIAN/control
           Package: wal-g-${{ matrix.db }}
           Version: ${VERSION}
           Section: database
           Priority: extra
-          Architecture: any
+          Architecture: ${{ matrix.deb_arch }}
           Maintainer: mdb <mdb-admin@yandex-team.ru>
           Description: WAL-G backup tool for ${{ matrix.db }} (Brotli, libsodium, LZO enabled)
           EOF
-          dpkg-deb --build wal-g-deb wal-g_${VERSION}-${{ matrix.db }}-amd64-${{ matrix.os }}.deb
+          dpkg-deb --build wal-g-deb wal-g_${VERSION}-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.os }}.deb
 
-      - name: Upload DEB package (AMD64)
+      - name: Upload DEB package (${{ matrix.deb_arch }})
         uses: actions/upload-artifact@v4
         with:
-          name: wal-g-deb-${{ matrix.db }}-${{ matrix.os }}-amd64
-          path: wal-g_${{ env.VERSION}}-${{ matrix.db }}-amd64-${{ matrix.os }}.deb
+          name: wal-g-deb-${{ matrix.db }}-${{ matrix.os }}-${{ matrix.deb_arch }}
+          path: wal-g_${{ env.VERSION}}-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.os }}.deb
 
   release-ubuntu-arm64:
     runs-on: ubuntu-20.04
@@ -87,6 +88,7 @@ jobs:
           - arch: aarch64
             distro: ubuntu20.04
             label: ubuntu-20.04
+            deb_arch: arm64
       fail-fast: false
     steps:
       - name: Checkout code
@@ -95,7 +97,7 @@ jobs:
       - name: Extract version
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
-      - name: Build and package WAL-G inside ARM64 container (ARM64)
+      - name: Build and package WAL-G inside ARM64 container (${{ matrix.deb_arch }})
         uses: uraimo/run-on-arch-action@v3
         with:
           arch: ${{ matrix.arch }}
@@ -120,34 +122,34 @@ jobs:
             git config --global --add safe.directory /home/runner/work/walg_test/walg_test/submodules/brotli
             make deps
             make pg_build
-            mv main/${{ matrix.db }}/wal-g wal-g-${{ matrix.db }}-arm64-${{ matrix.label }}
+            mv main/${{ matrix.db }}/wal-g wal-g-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.label }}
 
-      - name: Create DEB package (ARM64)
+      - name: Create DEB package (${{ matrix.deb_arch }})
         run: |            
             mkdir -p wal-g-deb/DEBIAN
             mkdir -p wal-g-deb/usr/bin/
-            cp wal-g-${{ matrix.db }}-arm64-${{ matrix.label }} wal-g-deb/usr/bin/wal-g
+            cp wal-g-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.label }} wal-g-deb/usr/bin/wal-g
             chmod 755 wal-g-deb/usr/bin/wal-g
             cat <<EOF > wal-g-deb/DEBIAN/control
             Package: wal-g-${{ matrix.db }}
             Version: ${VERSION}
             Section: database
             Priority: extra
-            Architecture: arm64
+            Architecture: ${{ matrix.deb_arch }}
             Maintainer: mdb <mdb-admin@yandex-team.ru>
             Description: WAL-G backup tool for ${{ matrix.db }} (Brotli, libsodium, LZO enabled)
             EOF
-            dpkg-deb --build wal-g-deb wal-g_${VERSION}-${{ matrix.db }}-arm64-${{ matrix.label }}.deb
+            dpkg-deb --build wal-g-deb wal-g_${VERSION}-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.label }}.deb
 
-      - name: Upload DEB package (ARM64)
+      - name: Upload DEB package (${{ matrix.deb_arch }})
         uses: actions/upload-artifact@v4
         with:
-          name: wal-g-deb-${{ matrix.db }}-${{ matrix.label }}-arm64
-          path: wal-g_${{ env.VERSION}}-${{ matrix.db }}-arm64-${{ matrix.label }}.deb
+          name: wal-g-deb-${{ matrix.db }}-${{ matrix.label }}-${{ matrix.deb_arch }}
+          path: wal-g_${{ env.VERSION}}-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.label }}.deb
 
 
   deploy-to-gh-pages:
-    needs: [release-ubuntu, release-ubuntu-arm64]
+    needs: [release-ubuntu-amd64, release-ubuntu-arm64]
     runs-on: ubuntu-20.04
 
     steps:
@@ -204,6 +206,7 @@ jobs:
             cp "$deb_file" "$TARGET_DIR/"
             echo "Placed $deb_file in $TARGET_DIR"
           done
+
       - name: Generate APT Repository Metadata 
         run: |
           cd repo-pages
