--- a/aptftparchive.conf
+++ b/aptftparchive.conf
@@ -2,13 +2,26 @@ Dir {
   ArchiveDir "dists";
 }
 
-APT::FTPArchive::Release {
+APT::FTPArchive::Release::focal {
+  Codename "focal";
   Origin "WAL-G Repo";
   Label "WAL-G APT Repository";
   Architectures "amd64 arm64";
   Components "main";
-}
+};
 
-APT::FTPArchive::Release::Codename "focal";
-APT::FTPArchive::Release::Codename "jammy";
-APT::FTPArchive::Release::Codename "noble";
+APT::FTPArchive::Release::jammy {
+  Codename "jammy";
+  Origin "WAL-G Repo";
+  Label "WAL-G APT Repository";
+  Architectures "amd64 arm64";
+  Components "main";
+};
+
+APT::FTPArchive::Release::noble {
+  Codename "noble";
+  Origin "WAL-G Repo";
+  Label "WAL-G APT Repository";
+  Architectures "amd64 arm64";
+  Components "main";
+};
