--- a/.github/workflows/deb-release-amd.yml
+++ b/.github/workflows/deb-release-amd.yml
@@ -21,7 +21,7 @@ env:
 
 jobs:
   release-ubuntu-amd64:
-    if: env.RUN_AMD64 == 'true'
+    if: ${{ env.RUN_AMD64 == 'true' }}
     strategy:
       matrix:
         os: [ ubuntu-20.04, ubuntu-22.04, ubuntu-24.04 ]
@@ -82,7 +82,7 @@ jobs:
           path: wal-g_${{ env.VERSION}}-${{ matrix.db }}-${{ matrix.deb_arch }}-${{ matrix.os }}.deb
 
   release-ubuntu-arm64:
-    if: env.RUN_ARM64 == 'true'
+    if: ${{ env.RUN_ARM64 == 'true' }}
     runs-on: ubuntu-20.04
     env:
       GO_VERSION: "1.22.8"    
@@ -154,7 +154,7 @@ jobs:
 
 
   deploy-to-gh-pages:
-    if: env.RUN_DEPLOY == 'true'
+    if: ${{ env.RUN_DEPLOY == 'true' }}
     needs: [release-ubuntu-amd64, release-ubuntu-arm64]
     runs-on: ubuntu-20.04
 
