--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -8,7 +8,7 @@ body:
     attributes:
       label: Database name
       description: WAL-G provides support for many databases. Please write the name of the database you use.
-      placeholder: e.g. PostgreSQL, MongoDB
+      placeholder: e.g. PostgreSQL, MongoDB, Redis
     validations:
       required: true
 
